--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
           <button class="
                 btn 
                 btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
+                {{'btn-primary'}}">
             <i class="fa fa-thumbs-up"></i>
           </button>
         </form>
